# pong-vhdl-ai

./: CMakeLists.txt  main.cpp  main2.cpp
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
prod/: CMakeCache.txt  Makefile  ai  cmake_install.cmake
